css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Nunito+Sans:wght@200;300;400;600&family=Poppins:wght@400;500;600;700&family=Titan+One&display=swap");
* {
  font-family: "Nunito Sans", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  outline: none;
  border: none;
  text-transform: capitalize;
  transition: all 0.2s linear;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
  scroll-padding-top: 5rem;
  overflow-x: hidden;
}
html::-webkit-scrollbar {
  width: 1rem;
}
html::-webkit-scrollbar-track {
  background: #000;
}
html::-webkit-scrollbar-thumb {
  background: linear-gradient(#f00 50%, #fff 50%);
  border-radius: 5rem;
}

body {
  background: #000;
}

section {
  padding: 5rem 9%;
}

/** All sections title style **/
.heading {
  text-align: center;
  margin-bottom: 3rem;
  position: relative;
}
.heading::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  height: 0.1rem;
  width: 100%;
  background: #aaa;
  z-index: -1;
}
.heading span {
  font-size: 3rem;
  color: #f00;
  background-color: #000;
  padding: 0.5rem 1.5rem;
  border: 0.1rem solid #aaa;
  border-radius: 0.5rem;
}

.btn {
  margin-top: 1rem;
  display: inline-block;
  padding: 1rem 2.8rem;
  padding-right: 3rem;
  color: #fff;
  cursor: pointer;
  background: linear-gradient(130deg, #f00 93%, transparent 90%);
  font-size: 1.7rem;
}
.btn:hover {
  transform: scale(1.1);
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 9%;
  background: #000;
  z-index: 10000;
}
.header .logo {
  font-weight: bolder;
  color: #f00;
  font-size: 3rem;
}
.header .logo span {
  color: #fff;
}
.header .navbar a {
  display: inline-block;
  padding: 1.5rem 2rem;
  font-size: 1.7rem;
  color: #fff;
}
.header .navbar a:hover {
  background: #f00;
}

#menu-btn {
  font-size: 3rem;
  color: #fff;
  cursor: pointer;
  display: none;
}

.home {
  padding: 0;
  margin-top: 6.5rem;
}
.home .slide {
  min-height: 70vh;
  background-size: cover !important;
  background-position: center !important;
  padding: 2rem 9%;
  display: flex;
  align-items: center;
}
.home .slide .content {
  width: 60rem;
}
.home .slide .content span {
  font-size: 2rem;
  color: #f00;
  display: block;
}
.home .slide .content h3 {
  font-size: 5rem;
  color: #fff;
  padding: 1rem 0;
}

.swiper-pagination-bullet {
  height: 2rem;
  width: 2rem;
  background: #fff;
  border-radius: 0;
}
.swiper-pagination-bullet.swiper-pagination-bullet-active {
  background: #f00;
}

.about {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 8rem;
}
.about .image {
  flex: 1 1 42rem;
  position: relative;
}
.about .image::before, .about .image::after {
  content: "";
  position: absolute;
  z-index: -1;
  background: #f00;
  height: 15rem;
  width: 15rem;
}
.about .image::before {
  top: 0;
  left: 0;
}
.about .image::after {
  bottom: 0;
  right: 0;
}
.about .image img {
  width: 100%;
  padding: 2rem;
}
.about .content {
  flex: 1 1 42rem;
}
.about .content span {
  font-size: 2rem;
  color: #f00;
}
.about .content .title {
  font-size: 4rem;
  color: #fff;
  margin-top: 0.5rem;
}
.about .content p {
  font-size: 1.5rem;
  color: #aaa;
  padding: 1rem 0;
  line-height: 2;
}
.about .content .box-container {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  margin-top: 1rem;
}
.about .content .box-container .box {
  flex: 1 1 20rem;
}
.about .content .box-container .box h3 {
  font-size: 2rem;
  color: #fff;
}
.about .content .box-container .box h3 i {
  padding-right: 1.5rem;
  color: #f00;
}

.features .box-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
  gap: 1.5rem;
  gap: 0;
}
.features .box-container .box {
  background: #111;
}
.features .box-container .box.second {
  display: flex;
  flex-flow: column-reverse;
}
.features .box-container .box:hover .image img {
  transform: scale(1.1);
}
.features .box-container .box .image {
  height: 30rem;
  width: 100%;
  overflow: hidden;
}
.features .box-container .box .image img {
  height: 100%;
  width: 100%;
  -o-object-fit: cover;
     object-fit: cover;
}
.features .box-container .box .content {
  padding: 2rem;
  text-align: center;
}
.features .box-container .box .content img {
  height: 9rem;
  margin-bottom: 1rem;
  filter: invert(1);
}
.features .box-container .box .content h3 {
  font-size: 2rem;
  color: #f00;
}
.features .box-container .box .content p {
  line-height: 2;
  font-size: 1.5rem;
  color: #aaa;
  padding: 1rem 0;
}

.pricing {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
  gap: 1.5rem;
}
.pricing .information span {
  font-size: 2rem;
  color: #f00;
}
.pricing .information h3 {
  font-size: 4rem;
  color: #fff;
  padding-top: 0.5rem;
}
.pricing .information p {
  line-height: 2;
  padding: 1rem 0;
  color: #aaa;
  font-size: 1.4rem;
}
.pricing .information i {
  padding-right: 1rem;
  color: #f00;
}
.pricing .plan {
  text-align: center;
  padding: 2rem;
}
.pricing .plan.basic {
  background: linear-gradient(130deg, #111 93%, transparent 90%);
}
.pricing .plan h3 {
  font-size: 2.5rem;
  margin: 1rem 0;
  color: #fff;
}
.pricing .plan .price {
  font-size: 5rem;
  font-weight: bolder;
  color: #f00;
}
.pricing .plan .price span {
  color: #fff;
  font-size: 2rem;
}
.pricing .plan .list {
  padding: 1rem 0;
}
.pricing .plan .list p {
  line-height: 2;
  padding: 1rem 0;
  color: #aaa;
  font-size: 1.4rem;
}
.pricing .plan .list i {
  padding-right: 1rem;
  color: #f00;
}

.trainers .box-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
  gap: 1.5rem;
}
.trainers .box-container .box {
  height: 40rem;
  background-color: red;
  overflow: hidden;
  position: relative;
}
.trainers .box-container .box:hover .content {
  transform: translateY(0);
}
.trainers .box-container .box img {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
}
.trainers .box-container .box .content {
  background: #111;
  padding: 2rem;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  transform: translateY(6.5rem);
}
.trainers .box-container .box .content span {
  font-size: 1.5rem;
  color: #f00;
}
.trainers .box-container .box .content h3 {
  font-size: 2rem;
  color: #fff;
  padding-top: 0.5rem;
}
.trainers .box-container .box .content .share {
  padding-top: 2rem;
  margin-top: 1.5rem;
  border-top: 0.1rem solid #aaa;
}
.trainers .box-container .box .content .share a {
  font-size: 2rem;
  color: #fff;
  margin-right: 1.5rem;
}
.trainers .box-container .box .content .share a:hover {
  color: #f00;
}

.banner {
  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/banner-bg.jpg) no-repeat;
  background-size: cover;
  background-attachment: fixed;
  text-align: center;
}
.banner span {
  font-size: 2rem;
  color: #f00;
}
.banner h3 {
  color: #fff;
  padding-top: 1rem;
  text-transform: uppercase;
  font-size: 3.5rem;
}
.banner p {
  font-size: 1.5rem;
  color: #aaa;
  max-width: 60rem;
  margin: 1rem auto;
  line-height: 2;
}

.review {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 2rem;
}
.review .information {
  flex: 1 1 35rem;
}
.review .information span {
  font-size: 2rem;
  color: #f00;
}
.review .information h3 {
  font-size: 3rem;
  color: #fff;
  padding-top: 1rem;
}
.review .information p {
  font-size: 1.5rem;
  line-height: 2;
  color: #aaa;
  padding: 1rem 0;
}
.review .review-slider {
  flex: 1 1 60rem;
}
.review .review-slider .slide {
  background: linear-gradient(130deg, #111 93%, transparent 90%);
  padding: 2rem 3rem;
}
.review .review-slider .slide p {
  font-size: 1.5rem;
  color: #aaa;
  line-height: 2;
}
.review .review-slider .slide .user {
  display: flex;
  align-items: center;
  margin-top: 1.5rem;
}
.review .review-slider .slide .user img {
  width: 5rem;
  height: 5rem;
  -o-object-fit: cover;
     object-fit: cover;
  border-radius: 50%;
  margin-right: 1rem;
}
.review .review-slider .slide .user h3 {
  font-size: 2rem;
  color: #fff;
}
.review .review-slider .slide .user span {
  color: #f00;
  font-size: 1.5rem;
}
.review .review-slider .slide .user i {
  font-size: 5rem;
  margin-left: auto;
  margin-right: 2rem;
  color: #f00;
}

.blogs .slide {
  background: #111;
  margin-bottom: 7rem;
}
.blogs .slide:hover .image img {
  transform: scale(1.1);
}
.blogs .slide .image {
  height: 25rem;
  width: 100%;
  overflow: hidden;
}
.blogs .slide .image img {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
}
.blogs .slide .content {
  padding: 2rem;
}
.blogs .slide .content .link {
  padding-bottom: 1.5rem;
  font-size: 1.5rem;
}
.blogs .slide .content .link a {
  color: #f00;
}
.blogs .slide .content .link a:hover {
  color: #fff;
}
.blogs .slide .content .link span {
  color: #fff;
  padding: 0 1rem;
}
.blogs .slide .content h3 {
  font-size: 2rem;
  color: #fff;
  line-height: 1.5;
}
.blogs .slide .content p {
  font-size: 1.5rem;
  color: #aaa;
  line-height: 2;
}

.footer .box-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
  gap: 1.5rem;
}
.footer .box-container .box h3 {
  font-size: 2.2rem;
  color: #fff;
  padding: 1rem 0;
}
.footer .box-container .box .links {
  font-size: 1.5rem;
  display: block;
  color: #aaa;
  padding: 1rem 0;
}
.footer .box-container .box .links:hover {
  color: #f00;
}
.footer .box-container .box p {
  font-size: 1.5rem;
  color: #aaa;
  padding: 1rem 0;
}
.footer .box-container .box p i {
  padding-right: 0.5rem;
  color: #f00;
}
.footer .box-container .box .share {
  padding: 1rem 0;
}
.footer .box-container .box .share a {
  height: 4.5rem;
  width: 4.5rem;
  line-height: 4.5rem;
  font-size: 1.7rem;
  color: #fff;
  background: #111;
  border-radius: 50%;
  margin-right: 0.5rem;
  text-align: center;
}
.footer .box-container .box .share a:hover {
  background: #f00;
}
.footer .box-container .box form .email {
  margin-bottom: 1rem;
  width: 100%;
  background: #111;
  padding: 1.2rem;
  font-size: 1.5rem;
  color: #fff;
  text-transform: none;
}

.credit {
  font-size: 2rem;
  text-align: center;
  padding: 2rem;
  color: #fff;
  background: #111;
  line-height: 1.5;
}
.credit span {
  color: #f00;
}

@media (max-width: 991px) {
  html {
    font-size: 55%;
    scroll-padding: 7rem;
  }
  .header {
    padding: 0 2rem;
  }
  section {
    padding: 3rem 2rem;
  }
  .home .slide {
    padding: 2rem 5%;
  }
  .home .slide .content {
    width: 50rem;
  }
  .home .slide .content h3 {
    font-size: 4rem;
  }
}
@media (max-width: 768px) {
  #menu-btn {
    display: inline-block;
  }
  #menu-btn.fa-times {
    transform: rotate(180deg);
  }
  .header {
    padding: 2rem;
  }
  .header .navbar {
    position: absolute;
    top: 99%;
    left: 0;
    right: 0;
    background: #000;
    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
  }
  .header .navbar.active {
    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
  }
  .header .navbar a {
    display: block;
    font-size: 2rem;
  }
  .about {
    gap: 3rem;
  }
  .about .image {
    margin-top: 5rem;
  }
  .about .content .title {
    font-size: 3rem;
  }
  .features .box-container .box.second {
    flex-flow: column;
  }
}
@media (max-width: 450px) {
  html {
    font-size: 50%;
  }
}/*# sourceMappingURL=styles.css.map */

